DigIt CHANGE LOG
======================

2024/11/
        29 Added Source and Destination properties to Main Form;
	   Writed BuildDuplex Wizard.
        27 Changed the SourceFiles array to Record TSourceFile (added the Crop field);
	   Added CropGoNext (without Cropping), ClearQueue, BuildDuplex  actions;
	   Writed TakeAgain action;
	   Check of put it in the middle Crop (to write);
	   Adjustments in Custom Crop logic;
	   Added BuildDuplex  Wizard (to write).
        26 Added a separate Crop Toolbar (minchia alignments when using ToolButton.Visible);
	   Finished Custom Crop logic;
	   Added Take Again and Take Front Back (to write)
        25 Several UI adjustments;
	   Completed write of Custom Crop (to be tested thoroughly)
	22 Several UI adjustments;
	   First write of Custom Crop Logic (to be completed and tested thoroughly)
        21 Added Counters RemoveAllButFirst;
	   Changed GetCurrentCounter to work with CropMode;
	   Changed Temp Path Location to Path_Config\tmp;
	   Added Progress to Crop_Full;
	   Use of DeleteDirectory to Delete Temp Files in Source_WIA.
        20 Adjusted UI Enable,Fill,etc in Main Form;
	   Added Progress Interface in Bridge;
	   Implemented Progress Interface in new Form_Progress;
	   Commented Source_WIA Set Pages=1 in preview (strange Brother Scanner behaviour)
	19 Added SourceFiles_Add, CropFile_Full methods;
	   Added SourceFiles Array (also in Load/Save XML Work);
	   Rewrite of Form Take method to use SourceFiles Array;
	   Changed Enabled of Take always to True when CropMode is FullArea;
	   Rewrite of Wia Source Take to use DownloadedFiles and IDigIt_ROArray;
	18 Added CropNext/Prev/All actions;
	   Deleted diCropAdvanced mode, take only Custom;
	   Re Added WIA Source with new Take params (must be tested);
        15 Added CropMode;
	   Added Array Interfaces;
	   Preview return a Single Filename and Take returns Array Interfaces;
	   Changed Entire acquisition structure with Take/Crop.